<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="selected_date">Selected Date</string>
    <string name="select_date">SELECT DATE</string>
    <string name="birth_date">01/01/2021</string>
    <string name="minutess">14000000</string>
</resources>