<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bgColor"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="18sp"
        android:textColor="@color/lightGrey"
        android:backgroundTint="@color/btnBgColor"/>

    <TextView
        android:id="@+id/tv_selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textColor="@color/lightGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutess"
        android:textColor="@color/textBlue"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textColor="@color/lightGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>


</LinearLayout>